@@ -1,5 +1,9 @@
 
 4.31  2013-09-04
+  - Deprecated mode specific methods in application class.
+      sub production_mode {...}
+    becomes
+      if ($self->mode eq 'production') {...}
 
 4.30  2013-09-01
   - Fixed memory leak in Mojolicious::Routes.
